--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,11 @@ body {
   text-align: center;
 }
 
+.text-shadow-black {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+}
+
+
 .about_section {
   background-image: url("/assets/arts/about_banner.png");
   background-size: cover;
