--- a/app/globals.css
+++ b/app/globals.css
@@ -207,16 +207,18 @@ body {
   height: 6px;
 }
 
-/* ::-webkit-scrollbar-track {
-  background: transparent; 
-} */
-
 ::-webkit-scrollbar-thumb {
   background-color: transparent; 
   border-radius: 6px; 
   border: 3px solid transparent; 
 }
 
-/* ::-webkit-scrollbar-thumb:hover {
-  border: 3px solid rgb(131, 204, 4);
-} */
+.scrolling::-webkit-scrollbar {
+  height: 6px;
+}
+
+.scrolling::-webkit-scrollbar-thumb {
+  background-color: #3f6104; 
+  border-radius: 6px; 
+  border: 3px solid #3f6104;
+}
