--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,6 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
 }
 
-
 .about_section {
   background-image: url("/assets/arts/about_banner.png");
   background-size: cover;
@@ -143,9 +142,7 @@ body {
 }
 
 .embla__viewport {
-  /* overflow: hidden; */
-  overflow-x: auto; /* Enables horizontal scrolling */
-  overflow-y: hidden; /* Hides vertical scrolling */
+  overflow: hidden;
 }
 
 .embla__container {
@@ -208,21 +205,19 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: transparent; 
-  border-radius: 6px; 
-  border: 3px solid transparent; 
+  background-color: transparent;
+  border-radius: 6px;
+  border: 3px solid transparent;
 }
 
 @media screen and (min-width: 768px) {
   .scrolling::-webkit-scrollbar {
     height: 6px;
   }
-  
+
   .scrolling::-webkit-scrollbar-thumb {
-    background-color: #3f6104; 
-    border-radius: 6px; 
+    background-color: #3f6104;
+    border-radius: 6px;
     border: 3px solid #3f6104;
   }
-  
 }
-
