Add charactors page, weapons page, fix some UX

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,6 +74,10 @@ body {
   );
 }
 
+.text-shadow-primary {
+  text-shadow: 0px 0px 16px rgba(130,199,8,0.55);
+}
+
 @media screen and (max-width: 768px) {
   .title_text {
     font-size: 32px;
